[FIX] autocomplete go behind navbar

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,5 +1,9 @@
 /* Global */
 
+.ui-autocomplete {
+    z-index: 9999;
+}
+
 a {
     color: #405377;
 }
